samples/_failures_safe/1761604700_3b87ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b905b806.c: In function ‘main’:
./samples/SAFE/__tmp_b905b806.c:133:13: error: expected declaration or statement at end of input
  133 |             }
      |             ^
./samples/SAFE/__tmp_b905b806.c:133:13: error: expected declaration or statement at end of input
